comentario de Ernesto

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -8,6 +8,7 @@
     <h:body>
         Hello from Facelets
         <h1>Este un cambio</h1>
+        <h3>Proyecto progra 5</h3>
     </h:body>
 </html>
 
