--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -3,12 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Proyecto Progra V</title>
     </h:head>
     <h:body>
-        Hello from Facelets
-        <h1>Este un cambio</h1>
-        <h3>Proyecto progra 5</h3>
+        
     </h:body>
 </html>
 
