--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -6,7 +6,7 @@
         <title>Proyecto Progra V</title>
     </h:head>
     <h:body>
-        
+        Mae utilice git - remote - pull, si quiere actualizar el proyecto. 
     </h:body>
 </html>
 
