--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -2,41 +2,44 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <!--bootstrap Script-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"></link>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"></link>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+
     <h:head>
         <link href="Estilos/estiloLogin.css" rel="stylesheet" type="text/css"/>
+        <!--bootstrap Script-->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"></link>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <title>Sistema DEAS</title>
     </h:head>
     <h:body>
-       <div class="main">
-                 
-                <div id="principal" >  
-                   <div id="cuadroInterior">
-                           <h:outputText value="DEAS UTN" ></h:outputText>   
-                     </div> 
-                    <h:form style="background: white" class="form-inline">
-                       <div class="form-group" style="background: white">   
-                            <h:outputText value="Usuario:" class="control-label" ></h:outputText>
-                            <h:inputText value="" class="form-control" style="width: 150%"></h:inputText>
-                       </div>
-                        <div class="form-group" style="background: white"> 
-                            <h:outputText value="Contraseña:" class="control-label" ></h:outputText>
-                            <h:inputText value="" class="form-control " style="width:137%"></h:inputText>
+        <div class="main">
+
+            <div id="principal" >  
+                <div id="cuadroInterior">
+                    <h:outputText value="DEAS UTN" ></h:outputText>   
+                </div> 
+                <h:form style="background: white" class="form-inline">
+                    <div class="form-group" style="background: white">   
+                        <h:outputText value="Usuario:" class="control-label" ></h:outputText>
+                        <h:inputText value="" class="form-control" style="width: 150%"></h:inputText>
+                    </div>
+                    <div class="form-group" style="background: white"> 
+                        <h:outputText value="Contraseña:" class="control-label" ></h:outputText>
+                        <h:inputText value="" class="form-control " style="width:137%"></h:inputText>
+                    </div>
+                    <div class="form-group" style="margin-left: 30%">
+                        <div  style="margin-left: 15px">
+                            <h:commandButton value="Ingresar" class="btn btn-lg" style="background:#191970; color:white"></h:commandButton>
                         </div>
-                         <div class="form-group" style="margin-left: 30%">
-                             <div  style="margin-left: 15px">
-                                 <h:commandButton value="Ingresar" class="btn btn-lg" style="background:#191970; color:white"></h:commandButton>
-                             </div>
-                         </div>
-                        <div style="background: white; margin:  0 auto">
-                          <a href="NuevaCuenta.xhtml"><h6 style=" color: #191970">Crear cuenta</h6></a>
-                        </div>
-                   </h:form>
-                </div>    
-              </div>  
+                    </div>
+                    <div style="background: white; margin:  0 auto">
+                        <a href="NuevaCuenta.xhtml"><h6 style=" color: #191970">Crear cuenta</h6></a>
+                    </div>
+                </h:form>
+            </div>    
+        </div>  
     </h:body>
 </html>
 
