--- a/web/NuevaCuenta.xhtml
+++ b/web/NuevaCuenta.xhtml
@@ -2,62 +2,58 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
-     <!--LINKS css-->
-     <link href="Estilos/estiloNuevaCuenta.css" rel="stylesheet" type="text/css"/>
-     <!--LINKS BOOTSTRAP-->
-    <link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
-
-
-    <link href="css/index/estilo.css" rel="stylesheet" />
-    <link href="css/index/font-orbitron.css" rel="stylesheet" />
-    <link href="css/index/responsive.css" rel="stylesheet" />
-    <link href="css/contactenos/ContactenosCSS.css" rel="stylesheet" /> 
     <h:head>
+        <!--LINKS css-->
+        <link href="Estilos/estiloNuevaCuenta.css" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"></link>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <title>Sistema DEAS</title>
     </h:head>
     <h:body>
-         <div class="main">
+        <div class="main">
             <div id="principal">
                 <div id="cuadroInterior">
-                     <h:outputText value="Registro DEAS" ></h:outputText> 
+                    <h:outputText value="Registro DEAS" ></h:outputText> 
                 </div>      
                 <h:form class="form-horizontal " id="form" >
-                      <legend>Ingrese sus Datos</legend>
-                          <div class="form-group">
-                            <h:outputText value="Nombre:" class="control-label"  ></h:outputText>
-                            <h:inputText value="" class="form-control"></h:inputText>
-                          </div>
-                          <div class="form-group">
-                             <h:outputText value="Primer apellido:" class="control-label"  ></h:outputText>
-                             <h:inputText value="" class="form-control"></h:inputText>
-                          </div>
-                          <div class="form-group">
-                             <h:outputText value="Segundo Apellido" class="control-label"  ></h:outputText>
-                             <h:inputText value="" class="form-control"></h:inputText>
-                          </div>
-                          <div class="form-group">
-                             <h:outputText value="Telefono:" class="control-label"  ></h:outputText>
-                             <h:inputText value="" class="form-control"></h:inputText>
-                          </div>
-                          <div class="form-group">
-                             <h:outputText value="Correo electronico:" class="control-label"  ></h:outputText>
-                             <h:inputText value="" class="form-control"></h:inputText>
-                          </div>
-                          <div class="form-group">
-                                <h:outputText value="Direccion" class="control-label"  ></h:outputText>
-                                <h:inputText value="" class="form-control"></h:inputText>
-                          </div>
-                         <div class="form-inline" style="margin-left: 30%">
-                             <div style="margin-right: 15px">
-                                 <h:commandButton value="Registrar" class="btn btn-lg" style="background:#191970; color:white"></h:commandButton> 
-                             </div>
-                             <div  style="margin-left: 15px">
-                                 <h:commandButton value="Regresar" class="btn btn-lg" style="background:#191970; color:white"></h:commandButton>
-                             </div>
-                          </div>
-                 </h:form>  
+                    <legend>Ingrese sus Datos</legend>
+                    <div class="form-group">
+                        <h:outputText value="Nombre:" class="control-label"  ></h:outputText>
+                        <h:inputText value="" class="form-control"></h:inputText>
+                    </div>
+                    <div class="form-group">
+                        <h:outputText value="Primer apellido:" class="control-label"  ></h:outputText>
+                        <h:inputText value="" class="form-control"></h:inputText>
+                    </div>
+                    <div class="form-group">
+                        <h:outputText value="Segundo Apellido" class="control-label"  ></h:outputText>
+                        <h:inputText value="" class="form-control"></h:inputText>
+                    </div>
+                    <div class="form-group">
+                        <h:outputText value="Telefono:" class="control-label"  ></h:outputText>
+                        <h:inputText value="" class="form-control"></h:inputText>
+                    </div>
+                    <div class="form-group">
+                        <h:outputText value="Correo electronico:" class="control-label"  ></h:outputText>
+                        <h:inputText value="" class="form-control"></h:inputText>
+                    </div>
+                    <div class="form-group">
+                        <h:outputText value="Direccion" class="control-label"  ></h:outputText>
+                        <h:inputText value="" class="form-control"></h:inputText>
+                    </div>
+                    <div class="form-inline" style="margin-left: 30%">
+                        <div style="margin-right: 15px">
+                            <h:commandButton value="Registrar" class="btn btn-lg" style="background:#191970; color:white"></h:commandButton> 
+                        </div>
+                        <div  style="margin-left: 15px">
+                            <h:commandButton value="Regresar" class="btn btn-lg" style="background:#191970; color:white"></h:commandButton>
+                        </div>
+                    </div>
+                </h:form>  
             </div>
-         </div>   
+        </div>   
     </h:body>
 </html>
 
