pagina solicitudCuenta.xtml creada, beanSolicitarCuenta.java creado estiloSolicitudCuenta.css creado Login y Principal con links correctos de boostrap

--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <div style="background: white; margin:  0 auto">
-                        <a href="NuevaCuenta.xhtml"><h6 style=" color: #191970">Crear cuenta</h6></a>
+                        <a href="#"><h6 style=" color: #191970">Solicitar Cuenta</h6></a>
                     </div>
                 </h:form>
             </div>    
