header agregado a la pagina de solicitudCuenta.xhtml imagen DEAS agregada

--- a/web/solicitudCuenta.xhtml
+++ b/web/solicitudCuenta.xhtml
@@ -11,8 +11,12 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <title>Sistema DEAS</title>
-    </h:head>
+    </h:head>       
     <h:body>
+        <header style="width: 100%; background: #102b70">
+            <img style="margin-left: 5%; border-radius: 27px; padding: 5px;" 
+                 src="Imagenes/deas.jpg" alt="" width="155" height="120"/>
+        </header>
         <div id="cajaPrincipal">
             <h:form>
                 <fieldset>
