--- a/web/NuevaCuenta.xhtml
+++ b/web/NuevaCuenta.xhtml
@@ -1,7 +1,8 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <!--LINKS css-->
         <link href="Estilos/estiloNuevaCuenta.css" rel="stylesheet" type="text/css"/>
@@ -41,7 +42,23 @@
                     </div>
                     <div class="form-group">
                         <h:outputText value="Direccion" class="control-label"  ></h:outputText>
-                        <h:inputText value="" class="form-control"></h:inputText>
+                        <div class="form-inline">
+                            <div class="dropdown"> 
+                                <h:selectOneMenu label="pro" value="#{beanRegistro.idProvincia}">
+                                        <f:selectItems  value="#{beanRegistro.listaProvincia}"/>
+                                  </h:selectOneMenu>
+                            </div> 
+                            <div class="dropdown"> 
+                                  <h:selectOneMenu label="pro" value="#{beanRegistro.idCanton}">
+                                            <f:selectItems  value="#{beanRegistro.listaCanton}"/>
+                                  </h:selectOneMenu>
+                            </div>
+                             <div class="dropdown"> 
+                                  <h:selectOneMenu label="pro" value="#{beanRegistro.idDistrito}">
+                                        <f:selectItems value="#{beanRegistro.listaDistrito}"/>
+                                  </h:selectOneMenu>
+                            </div> 
+                         </div>   
                     </div>
                     <div class="form-inline" style="margin-left: 30%">
                         <div style="margin-right: 15px">
