--- a/web/NuevaCuenta.xhtml
+++ b/web/NuevaCuenta.xhtml
@@ -22,23 +22,23 @@
                     <legend>Ingrese sus Datos</legend>
                     <div class="form-group">
                         <h:outputText value="Nombre:" class="control-label"  ></h:outputText>
-                        <h:inputText value="" class="form-control"></h:inputText>
+                        <h:inputText value="#{beanRegistro.nombre}" class="form-control"></h:inputText>
                     </div>
                     <div class="form-group">
                         <h:outputText value="Primer apellido:" class="control-label"  ></h:outputText>
-                        <h:inputText value="" class="form-control"></h:inputText>
+                        <h:inputText value="#{beanRegistro.apellido1}" class="form-control"></h:inputText>
                     </div>
                     <div class="form-group">
                         <h:outputText value="Segundo Apellido" class="control-label"  ></h:outputText>
-                        <h:inputText value="" class="form-control"></h:inputText>
+                        <h:inputText value="#{beanRegistro.apellido2}" class="form-control"></h:inputText>
                     </div>
                     <div class="form-group">
                         <h:outputText value="Telefono:" class="control-label"  ></h:outputText>
-                        <h:inputText value="" class="form-control"></h:inputText>
+                        <h:inputText  class="form-control"></h:inputText>
                     </div>
                     <div class="form-group">
                         <h:outputText value="Correo electronico:" class="control-label"  ></h:outputText>
-                        <h:inputText value="" class="form-control"></h:inputText>
+                        <h:inputText  class="form-control"></h:inputText>
                     </div>
                     <div class="form-group">
                         <h:outputText value="Direccion" class="control-label"  ></h:outputText>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="form-inline" style="margin-left: 30%">
                         <div style="margin-right: 15px">
-                            <h:commandButton value="Registrar" class="btn btn-lg" style="background:#191970; color:white"></h:commandButton> 
+                            <h:commandButton value="Registrar" class="btn btn-lg" style="background:#191970; color:white" actionListener="#{beanRegistro.insertarUsuario()}"></h:commandButton> 
                         </div>
                         <div  style="margin-left: 15px">
                             <h:commandButton value="Regresar" class="btn btn-lg" style="background:#191970; color:white"></h:commandButton>
