--- a/web/NuevaCuenta.xhtml
+++ b/web/NuevaCuenta.xhtml
@@ -2,7 +2,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
+    
     <h:head>
         <!--LINKS css-->
         <link href="Estilos/estiloNuevaCuenta.css" rel="stylesheet" type="text/css"/>
@@ -39,6 +41,11 @@
                     <div class="form-group">
                         <h:outputText value="Correo electronico:" class="control-label"  ></h:outputText>
                         <h:inputText  class="form-control"></h:inputText>
+                    </div>
+                    <div class="form-group">
+                        <h:outputText value="Fecha nacimiento:" class="control-label"  ></h:outputText>
+                        <p:outputLabel for="inline" value="fecha" />
+                        <p:calendar id="inline" value="#{calendarView.date1}" mode="inline" ></p:calendar>
                     </div>
                     <div class="form-group">
                         <h:outputText value="Direccion" class="control-label"  ></h:outputText>
