--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -36,7 +36,7 @@
                     
                     <div class="form-group" style="width: 330px; margin: 0 auto; position: relative; top: 15px;"> 
                         <h:outputText value="Contraseña:" class="control-label" ></h:outputText>
-                        <h:inputText value="" class="form-control " style="width: 100%"></h:inputText>
+                        <h:inputSecret value="" class="form-control " style="width: 100%"></h:inputSecret>
                     </div>
 
                     <div class="form-group" style="width: 330px; margin: 0 auto; position: relative; top: 20px;"> 
@@ -50,7 +50,7 @@
                     <div style="width: 270px; height: 50px; margin: 0 auto; top: 30px; position: relative">
                         <h:commandButton id="btnIngresar" value="Ingresar" 
                                          class="btn btn-lg" 
-                                         style=" background:#191970; color:white; width: 100%;height: 100%">
+                                         style=" background:#102b70; color:white; width: 100%;height: 100%">
                         </h:commandButton>
                     </div>
 
