--- a/web/Principal.xhtml
+++ b/web/Principal.xhtml
@@ -2,40 +2,52 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
-    
+
     <h:head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"></link>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <link href="Estilos/estiloPrincipal.css" rel="stylesheet" type="text/css"/>
         <title>Sistema DEAS</title>
     </h:head>
     <h:body>
-<!---->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background:#191970">
-        <a class="navbar-brand" href="#">DEAS UTN</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-          </button>
+        <header style="width: 100%; height: 140px; background: #102b70;">
+            <img id="imgLogo" src="Imagenes/deas.jpg" alt="" width="155" height="120"/>
+        </header>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-2" style="background-color: #102b70">
 
-          <div class="collapse navbar-collapse" id="navbarColor02">
-            <ul class="navbar-nav mr-auto">
-                
-                 <li class="nav-item">
-                       <a class="nav-link" href="#">Observar calendario</a>
-                </li>
-                <li class="nav-item">
-                        <a class="nav-link" href="#">Mantenimientos</a>
-                </li>
-                <li class="nav-item">
-                        <a class="nav-link" href="#">Reportes</a>
-                </li>
-                <li class="nav-item">
-                        <a class="nav-link" href="#">Ayuda</a>
-                </li>
-            </ul>
-          </div>
-        </nav>
+                </div>
+
+                <nav class="col-10 navbar navbar-expand-lg navbar-dark bg-dark" style="background:#191970">
+                    <a class="navbar-brand" href="#">DEAS UTN</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarColor02">
+                        <ul class="navbar-nav mr-auto">
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Observar calendario</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Mantenimientos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Reportes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Ayuda</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+
     </h:body>
 </html>
 
