--- a/web/MantenimientoUsuario.xhtml
+++ b/web/MantenimientoUsuario.xhtml
@@ -34,9 +34,7 @@
             </div>
 
             <div class="ui-g-9">
-                <p:dataGrid var="usu" value="#{beanMentenimientoUsuario.listaUsuarios}" columns="3" layout="grid"
-                            rows="6" paginator="true" 
-                            rowsPerPageTemplate="6,12,16">
+                <p:dataGrid var="usu" value="#{beanMentenimientoUsuario.listaAdministrativos}" columns="3" layout="grid"  rows="6" paginator="true"  rowsPerPageTemplate="6,12,16">
 
                     <f:facet name="header">
                         Lista de Usuarios
