--- a/web/NuevaCuenta.xhtml
+++ b/web/NuevaCuenta.xhtml
@@ -51,7 +51,7 @@
                 <p:inputText value="#{beanRegistro.apellido2}"   />
 
                 <h:outputLabel  value="Correo:" style="font-weight:normal; font-size: larger"  />
-                <p:inputText style="width: 260px"  value="#{beanRegistro.correo}" />
+                <p:inputText  value="#{beanRegistro.correo}" />
 
                 <h:outputLabel  value="Numero de telefono:" style="font-weight:normal; font-size: larger"  />
                 <p:inputMask  value="#{beanRegistro.telefono}"   mask="9999-9999"/>
