Avance mantienimientos, mensajes funcionando en pruebas

--- a/web/MantenimientoUsuario.xhtml
+++ b/web/MantenimientoUsuario.xhtml
@@ -71,7 +71,7 @@
 
             <p:dialog header="Informacion del Usuario" widgetVar="usuDialog" modal="true" showEffect="fade" hideEffect="fade" resizable="false">
                 <p:outputPanel id="usuDetalles" style="text-align:center;">
-                    <h:panelGrid  columns="4" rendered="#{not empty beanMentenimientoUsuario.usuario}" columnClasses="label,value" cellspacing="20" style="margin:0 auto;"   >
+                    <h:panelGrid  columns="4" rendered="#{not empty beanMentenimientoUsuario.usuario}" columnClasses="label,value" cellspacing="20" cellpadding="0" style="margin:0 auto;"   >
                         <f:facet name="header">
                             <img src="Imagenes/deas.jpg" alt=""/>
                         </f:facet>
