cambios en el proyecto

--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -50,7 +50,7 @@
             </h:panelGrid>
             
             <div style="position: relative; margin: 0 auto; text-align: center; top: 10px">
-                <p:commandButton value="Ingresar"  actionListener="#{beanRegistro.insertarUsuario()}"/>
+                <p:commandButton value="Ingresar"  actionListener="#{beanLogin.autenticar()}"/>
                 <p:commandButton value="Cancelar"  action="Login.xhtml" style="margin-left: 20px" />
             </div>
             
