--- a/web/AceptacionSolictudes.xhtml
+++ b/web/AceptacionSolictudes.xhtml
@@ -45,24 +45,24 @@
             </div>
 
             <div class="ui-g-9">                                                                                 <!--paginator="true"   rowsPerPageTemplate="6,12,16"-->
-                <p:dataGrid var="infra" value="#{beanMantenimientoInfraestructura.listaInfraestructura}" columns="3" layout="grid"  rows="6" >
+                <p:dataGrid var="usuario" value="#{beanSolicitudes.listaPendientes}" columns="3" layout="grid"  rows="6" >
 
                     <f:facet name="header">
                         Lista de Infraestructuras
                     </f:facet>
 
-                    <p:panel header="#{infra.descripcion}" style="text-align:center">
+                    <p:panel header="#{usuario.identificacion}" style="text-align:center">
                         <h:panelGrid columns="1" style="width:100%">
 
                             <f:facet name="header">
                                 <img src="Imagenes/deas.jpg" alt="" width="100" height="100"/>
                             </f:facet>
 
-                            <h:outputText value="#{infra.descripcion}" />
+                            <h:outputText value="#{usuario.nombre}" />
 
-                            <p:commandLink update=":form:infraDetalles" oncomplete="PF('infraDialog').show()" title="Detalles" action="#{beanMantenimientoInfraestructura.ocultar()}">
+                            <p:commandLink update=":form:usuDetalles" oncomplete="PF('usuDialog').show()" title="Detalles" >
                                 <h:outputText value="Detalles" style="margin:0 auto;"/>
-                                <f:setPropertyActionListener value="#{infra}" target="#{beanMantenimientoInfraestructura.infra}" />
+                                <f:setPropertyActionListener value="#{usuario}" target="#{beanSolicitudes.usuario}" />
                             </p:commandLink>
                         </h:panelGrid>
                     </p:panel>
@@ -70,32 +70,42 @@
                 </p:dataGrid>
             </div>
 
-            <p:dialog header="Informacion de la infraestructura" widgetVar="infraDialog" modal="true" showEffect="fade" hideEffect="fade" resizable="false">
-                <p:outputPanel id="infraDetalles" style="text-align:center;">
-                    <p:panelGrid  columns="2" rendered="#{not empty beanMantenimientoInfraestructura.infra}" columnClasses="label,value">
+            <p:dialog header="Solicitudes recibidas" widgetVar="usuDialog" modal="true" showEffect="fade" hideEffect="fade" resizable="false">
+                <p:outputPanel id="usuDetalles" style="text-align:center;">
+                    <p:panelGrid  columns="2" rendered="#{not empty beanSolicitudes.usuario}" columnClasses="label,value">
                         <f:facet name="header">
                             <img src="Imagenes/deas.jpg" alt=""/>
                         </f:facet>
 
-                        <p:outputLabel value="Codigo de la infraestructura" ></p:outputLabel>
-                        <p:inputText value="#{beanMantenimientoInfraestructura.infra.idInfraestructura}" disabled="#{beanMantenimientoInfraestructura.disable}" />
+                        <p:outputLabel value="Identificacion:" ></p:outputLabel>
+                        <p:inputText value="#{beanSolicitudes.usuario.identificacion}" disabled="#{beanSolicitudes.disable}" />
 
-                        <p:outputLabel value="Descripcion:" ></p:outputLabel>
-                        <p:inputText value="#{beanMantenimientoInfraestructura.infra.descripcion}" />
+                        <p:outputLabel value="Nombre:" ></p:outputLabel>
+                        <p:inputText value="#{beanSolicitudes.usuario.nombre }" disabled="#{beanSolicitudes.disable}" />
+
+                        <p:outputLabel value="Apellido:" ></p:outputLabel>
+                        <p:inputText value="#{beanSolicitudes.usuario.apellido1}" disabled="#{beanSolicitudes.disable}"/>
+
+                        <p:outputLabel value="Correo:" ></p:outputLabel>
+                        <p:inputText value="#{beanSolicitudes.usuario.correo}" disabled="#{beanSolicitudes.disable}"/>
+
+                        <p:outputLabel value="Tipo identificacion:" ></p:outputLabel>
+                        <p:inputText value="#{beanMantenimientoInfraestructura.infra.descripcion}" disabled="#{beanSolicitudes.disable}"  />
+
+                        <p:outputLabel value="Numero Telefonico:" ></p:outputLabel>
+                        <p:inputText value="#{beanSolicitudes.usuario.contrasena}" disabled="#{beanSolicitudes.disable}" />
 
                     </p:panelGrid>
-                    <p:commandButton value="Agregar" rendered="#{beanMantenimientoInfraestructura.visible}" actionListener="#{beanMantenimientoInfraestructura.insertarInfraestructura()}" oncomplete="@all"/>
+
 
 
                 </p:outputPanel>
-                <div> 
-                    <p:commandButton value="Ayuda"  update=":form:infraDetalles" action="#{beanMantenimientoInfraestructura.ocultar()}" oncomplete="PF('infraDialog').show()"  ajax="true"/>
-                    <p:commandButton value="Nuevo"  update=":form:infraDetalles"  action="#{beanMantenimientoInfraestructura.limpiaCampos()}" oncomplete="PF('infraDialog').show()"  ajax="true" />  
-                    <p:commandButton value="Modificar" update=":form:infraDetalles" action="#{beanMantenimientoInfraestructura.ocultar()}" actionListener="#{beanMantenimientoInfraestructura.actualizar()}" oncomplete="@all"  ajax="true" />
-                    <p:commandButton value="Eliminar" update=":form:infraDetalles" action="#{beanMantenimientoInfraestructura.ocultar()}" actionListener="#{beanMantenimientoInfraestructura.eliminar()}" oncomplete="@all"  ajax="true" />
+                <div style="position: relative; margin: 0 auto; text-align: center; margin:3%" > 
+                    <p:commandButton value="Aceptar" update=":form:usuDetalles" actionListener="#{beanSolicitudes.aceptarSolicitud()}" oncomplete="@all"  ajax="true" />
+                    <p:commandButton value="Rechazar" update=":form:usuDetalles"  actionListener="#{beanSolicitudes.rechazarSolicitud()}" oncomplete="@all"  ajax="true" />
                 </div>
             </p:dialog>
-            
+
             <p:growl  autoUpdate="true" id="messages" showDetail="true" />   
         </h:form>
     </h:body>
