--- a/web/MantenimientoInfraestructura.xhtml
+++ b/web/MantenimientoInfraestructura.xhtml
@@ -45,7 +45,7 @@
             </div>
 
             <div class="ui-g-9">                                                                                 <!--paginator="true"   rowsPerPageTemplate="6,12,16"-->
-                <p:dataGrid var="infra" value="#{beanMantenimientoInfraestructura.listaInfraestructura}" columns="3" layout="grid"  rows="6" >
+                <p:dataGrid var="infra" value="#{beanMantenimientoInfraestructura.listaInfraestructura}" paginator="true" columns="3" layout="grid"  rows="3" >
 
                     <f:facet name="header">
                         Lista de Infraestructuras
@@ -77,11 +77,6 @@
                             <img src="Imagenes/deas.jpg" alt=""/>
                         </f:facet>
 
-                        <p:outputLabel value="Estado" ></p:outputLabel>
-                        <p:selectOneMenu  value="#{beanMantenimientoInfraestructura.estado}" style=" width:78%"  >
-                            <f:selectItems value="#{beanMantenimientoInfraestructura.listaEstado}" />  
-                        </p:selectOneMenu>
-
                         <p:outputLabel value="Codigo de la infraestructura" ></p:outputLabel>
                         <p:inputText value="#{beanMantenimientoInfraestructura.infra.idInfraestructura}" disabled="#{beanMantenimientoInfraestructura.disable}" />
 
@@ -101,7 +96,12 @@
                 </div>
             </p:dialog>
 
-            <p:growl  autoUpdate="true" id="messages" showDetail="true" />   
+            <p:growl  autoUpdate="true" id="messages" showDetail="true" />
+            <div class="ui-g-12" style="padding: 0; bottom: 0;margin-bottom: 0; position: fixed">
+                <footer style="height: 50px; background-color: #102b70">
+                    <h3 style="text-align: center;color: white; position: relative; top: 15px;">Proyecto Programacion V</h3>
+                </footer>
+            </div>
         </h:form>
     </h:body>
 </html>
