cambios realizados en la reservacion

--- a/web/Reservacion.xhtml
+++ b/web/Reservacion.xhtml
@@ -137,7 +137,7 @@
                     <p:spacer></p:spacer>
                     <p:commandButton id="addButton" value="Guardar" update="growl" actionListener="#{scheduleView.addEvent}" oncomplete="PF('myschedule').update();PF('eventDialog').hide();" />
                     <p:commandButton type="reset" value="Limpiar" />
-                    <p:commandButton value="Modificar" />
+                    <p:commandButton value="Eliminar" />
                     
                 </h:panelGrid>
             </p:dialog>    
